modificacion tamañó y animacion logo

--- a/index.html
+++ b/index.html
@@ -6,20 +6,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Invitación • Camila & Tomás</title>
 
-    <!-- ----- Google Fonts románticas ----- -->
+    <!-- 🔹 Optimización: unificar todas las fuentes en una sola solicitud -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
-        rel="stylesheet">
     <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Playfair+Display:wght@400;700&family=Montserrat:wght@100..900&family=Libre+Baskerville:wght@400;700&family=Lora:wght@400..700&family=Cormorant+Garamond:wght@300..700&display=swap"
         rel="stylesheet">
+
 
 
 
@@ -63,7 +56,7 @@
     <header class="hero">
         <img src="assets/images/portada.jpg" alt="Camila y Tomás" class="hero__img">
         <div class="hero__overlay">
-            <img src="assets/images/logo_personal.png" alt="Logo Camila y Tomás" class="hero__logo fade-zoom">
+            <img src="assets/images/logo_personal.png" alt="Logo Camila y Tomás" class="hero__logo">
         </div>
         <a href="#frase" class="hero__scroll-down" aria-label="Bajar"></a>
     </header>
@@ -71,7 +64,8 @@
     <!-- ========= FRASE ========= -->
     <section class="frase" id="frase">
         <div class="frase__container">
-            <img src="assets/icons/heart-internet_26694.png" alt="icon icono-corazon" class="frase__img fade-zoom" width="10" >
+            <img src="assets/icons/heart-internet_26694.png" alt="icon icono-corazon" class="frase__img fade-zoom"
+                width="10">
 
             <div class="frase__text fade-down">
                 <h4>Nuestro Momento Ha Llegado</h4>
@@ -102,7 +96,8 @@
                 Sábado 20 de Septiembre – 17:00 hs<br>
                 Iglesia del Carmen | Palermo
             </p>
-            <a class="button button--primary button--hover pause-music" target="_blank" href="https://maps.app.goo.gl/kdgQZJ7jHJBeDgxV6">Cómo
+            <a class="button button--primary button--hover pause-music" target="_blank"
+                href="https://maps.app.goo.gl/kdgQZJ7jHJBeDgxV6">Cómo
                 llegar</a>
         </div>
         <div class="fiesta__inner fade-down">
@@ -111,7 +106,8 @@
                 Sábado 20 de Septiembre – 20:00 hs<br>
                 Salón Rosa | Palermo
             </p>
-            <a class="button button--primary button--hover pause-music" target="_blank" href="https://maps.app.goo.gl/bnKoFgJ8cQ3zs9Vm6">Cómo
+            <a class="button button--primary button--hover pause-music" target="_blank"
+                href="https://maps.app.goo.gl/bnKoFgJ8cQ3zs9Vm6">Cómo
                 llegar</a>
         </div>
     </section>
@@ -129,7 +125,8 @@
             <div class="rspv__calendario fade-down">
                 <p>¡Agendá la fecha en tu calendario!</p>
                 <div class="rsvp__dropdown">
-                    <button id="btnCalendar" class="button button--primary calendar-button pause-music">Agendar evento</button>
+                    <button id="btnCalendar" class="button button--primary calendar-button pause-music">Agendar
+                        evento</button>
                     <ul id="calendarMenu" class="dropdown__menu">
                         <li>
                             <a href="https://calendar.google.com/calendar/render?...">
@@ -166,7 +163,8 @@
 
             </div>
             <br>
-            <img src="assets/icons/wedding-dress.png" alt="icono-dresscode" class="icono-img-primary dresscode  fade-zoom">
+            <img src="assets/icons/wedding-dress.png" alt="icono-dresscode"
+                class="icono-img-primary dresscode  fade-zoom">
             <div class="dresscode__container fade-down">
                 <h4 class="section__title-dresscode">DRESS CODE:</h4>
                 <p class="dresscode__info">Elegancia formal.
@@ -180,16 +178,18 @@
     <section class="instagram">
         <div class="instagram__container">
             <img src="assets/icons/wedding-photos.png" alt="icono-instagram" class="icono-img  fade-zoom camera">
-            
+
             <div class="instagram__text fade-down">
                 <h4>
                     <span class="hashtag">@CamilayTomas</span>
                 </h4>
                 <p>¡Preparate para nuestro casamiento!
                     <br>
-                    Sumate a cada detalle de nuestra historia en Instagram y compartí tus fotos usando <span class="hashtag">#CamilaYTomás</span>
+                    Sumate a cada detalle de nuestra historia en Instagram y compartí tus fotos usando <span
+                        class="hashtag">#CamilaYTomás</span>
                 </p>
-                <a class="button button--primary button--hover pause-music" target="_blank" href="https://www.instagram.com/fernandopizarro__/">Ver en
+                <a class="button button--primary button--hover pause-music" target="_blank"
+                    href="https://www.instagram.com/fernandopizarro__/">Ver en
                     Instagram</a>
 
             </div>
@@ -199,7 +199,8 @@
     <!-- ========= GALERÍA ========= -->
     <section class="galeria section bg-light">
         <div class="galeria__contenedor hidden">
-            <h4 class="galeria__title  fade-zoom">NUESTRA HISTORIA EN IMÁGENES <br><img src="assets/icons/diary.png" alt="" class="diary"></h4>
+            <h4 class="galeria__title  fade-zoom">NUESTRA HISTORIA EN IMÁGENES <br><img src="assets/icons/diary.png"
+                    alt="" class="diary"></h4>
             <p class="galeria__text fade-down">Mil instantes que nos llevaron hasta aquí.</p>
             <div class="galeria__grid">
                 <button class="gallery__item" type="button"><img src="assets/images/1.jpg" alt="Foto 1"></button>
@@ -250,7 +251,8 @@
             </ul>
             <span class="title__modal">Lista de Regalos</span>
             <ul>
-                <li><a href="https://novios.falabella.com/" target="_blank" class="pause-music">Falabella Novios</a></li>
+                <li><a href="https://novios.falabella.com/" target="_blank" class="pause-music">Falabella Novios</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -260,11 +262,12 @@
     <section id="playlist" class="playlist">
         <div class="playlist__card  fade-zoom">
             <h4 class="playlist__title">¡A BAILAR!</h4>
-            <p class="playlist__text">Queremos que la música sea el reflejo de nuestra alegría. 
+            <p class="playlist__text">Queremos que la música sea el reflejo de nuestra alegría.
                 <br>
                 ¡Sumá tu tema favorito!
             </p>
-            <a class="button button--outline button--hover pause-music" target="_blank" href="https://forms.gle/fV4XXE9pPn51y9en8">Sugerir canción</a>
+            <a class="button button--outline button--hover pause-music" target="_blank"
+                href="https://forms.gle/fV4XXE9pPn51y9en8">Sugerir canción</a>
 
         </div>
     </section>
@@ -308,15 +311,18 @@
             <ul class="modal__list">
                 <li>
                     <strong>Transporte 1</strong><br>
-                    WhatsApp: 11-7777-8888<a href="https://transporte1.com" target="_blank" class="pause-music"><br>Web</a>
+                    WhatsApp: 11-7777-8888<a href="https://transporte1.com" target="_blank"
+                        class="pause-music"><br>Web</a>
                 </li>
                 <li>
                     <strong>Transporte 2</strong><br>
-                    WhatsApp: 11-9999-0000<a href="https://transporte2.com" target="_blank" class="pause-music"><br>Web</a>
+                    WhatsApp: 11-9999-0000<a href="https://transporte2.com" target="_blank"
+                        class="pause-music"><br>Web</a>
                 </li>
                 <li>
                     <strong>Transporte 3</strong><br>
-                    WhatsApp: 11-2222-3333<a href="https://transporte3.com" target="_blank" class="pause-music"><br>Web</a>
+                    WhatsApp: 11-2222-3333<a href="https://transporte3.com" target="_blank"
+                        class="pause-music"><br>Web</a>
                 </li>
             </ul>
         </div>
