fade para secciones

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
 
     <!-- ========= FRASE ========= -->
-    <section class="frase" id="frase">
+    <section class="frase fade-down" id="frase">
         <div class="frase__container">
             <img src="assets/icons/heart-internet_26694.png" alt="icon icono-corazon" class="frase__img fade-zoom"
                 width="10">
@@ -78,7 +78,7 @@
     </section>
 
     <!-- ========= COUNTDOWN ========= -->
-    <section id="countdown" class="section">
+    <section id="countdown" class="section fade-down section-countdown">
 
         <div id="clock" class="countdown__clock"></div>
         <img src="assets/icons/wedding-rings.png" alt="icono-boda" class="countdown__img  fade-zoom">
@@ -89,8 +89,8 @@
     </section>
 
     <!-- ========= CEREMONIA & FIESTA ========= -->
-    <section id="fiesta" class="section section__ceremonia">
-        <div class="fiesta__inner fade-down">
+    <section id="fiesta" class="section section__ceremonia fade-down">
+        <div class="fiesta__inner">
             <h3 class="section__title section__title--fiesta">Celebración Religiosa</h3>
             <p>
                 Sábado 20 de Septiembre – 17:00 hs<br>
@@ -100,7 +100,7 @@
                 href="https://maps.app.goo.gl/kdgQZJ7jHJBeDgxV6">Cómo
                 llegar</a>
         </div>
-        <div class="fiesta__inner fade-down">
+        <div class="fiesta__inner">
             <h3 class="section__title section__title--fiesta">Fiesta de Gala</h3>
             <p>
                 Sábado 20 de Septiembre – 20:00 hs<br>
@@ -113,7 +113,7 @@
     </section>
 
     <!-- ========= RSVP ========= -->
-    <section id="rsvp" class="confirmar-asistencia">
+    <section id="rsvp" class="confirmar-asistencia fade-down">
         <div class="rsvp__container">
             <h4 class="section__title section__title-rspv fade-zoom">Confirmá tu Asistencia</h4>
             <div class="rspv__info fade-down">
@@ -175,7 +175,7 @@
         </div>
     </section>
     <!-- ========= INSTAGRAM ========= -->
-    <section class="instagram">
+    <section class="instagram fade-down">
         <div class="instagram__container">
             <img src="assets/icons/wedding-photos.png" alt="icono-instagram" class="icono-img  fade-zoom camera">
 
@@ -197,8 +197,8 @@
     </section>
 
     <!-- ========= GALERÍA ========= -->
-    <section class="galeria section bg-light">
-        <div class="galeria__contenedor hidden">
+    <section class="galeria section bg-light fade-down">
+        <div class="galeria__contenedor fade-down">
             <h4 class="galeria__title  fade-zoom">NUESTRA HISTORIA EN IMÁGENES <br><img src="assets/icons/diary.png"
                     alt="" class="diary"></h4>
             <p class="galeria__text fade-down">Mil instantes que nos llevaron hasta aquí.</p>
@@ -223,7 +223,7 @@
     </section>
 
     <!-- ========= REGALOS ========= -->
-    <section id="regalos" class="cbu">
+    <section id="regalos" class="cbu fade-down">
         <div class="cbu__container">
             <img src="assets/icons/gift.png" alt="icono-regalo" class="icono-img  fade-zoom gift">
             <div class="cbu__text fade-down">
@@ -259,7 +259,7 @@
 
 
     <!-- ========= PLAYLIST ========= -->
-    <section id="playlist" class="playlist">
+    <section id="playlist" class="playlist fade-down">
         <div class="playlist__card  fade-zoom">
             <h4 class="playlist__title">¡A BAILAR!</h4>
             <p class="playlist__text">Queremos que la música sea el reflejo de nuestra alegría.
@@ -273,7 +273,7 @@
     </section>
 
     <!-- ================ALOJAMIENTOS================== -->
-    <section class="alojamientos">
+    <section class="alojamientos fade-down">
         <div class="alojamientos__container">
             <h4 class="section__title info-util">PLANIFICÁ TU ESTADÍA</h4>
             <p>
@@ -330,7 +330,7 @@
 
 
     <!-- ========= GRACIAS ========= -->
-    <section id="gracias" class="section__gracias">
+    <section id="gracias" class="section__gracias fade-down">
         <div id="glitter-container" class="gracias__glitter-container">
             <p class="section__title section__title--gracias fade-zoom">
                 ♥
